--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -14,6 +14,15 @@ body {
   font-family: sans-serif;
 
 }
+
+.black{
+  background: #000;
+}
+.bg{
+
+  opacity:0.7;
+}
+
 .companyinto{
   position: absolute;
   top:40%;
@@ -24,7 +33,7 @@ body {
   font-family: sans-serif;
 }
 
-#companyname{
+.companyname{
   text-align: center;
   color:#fff;
   font-size: 60px;
@@ -39,6 +48,40 @@ body {
   font-family: sans-serif;
   font-weight: 200;
 }
+
+@media (max-width: 767px){
+
+  .companyinto{
+    position: absolute;
+    top:13%;
+    width:100%;
+    text-align: center;
+    align-content: center;
+    text-align: center;
+    font-family: sans-serif;
+  }
+  .companyname{
+    text-align: center;
+    color:#fff;
+    font-size: 40px;
+    font-family: sans-serif;
+    font-weight: 600;
+    letter-spacing: 1px;
+line-height: 40px;
+  }
+
+  #tagline{
+    text-align: center;
+    color:#fff;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: 200;
+    letter-spacing: 0.5px;
+    padding:0px 0 0 0;
+    line-height: 30px;
+  }
+}
+
 
 #opening{
   padding:60px 30px 20px 30px;
@@ -164,17 +207,15 @@ height:auto;
 
 .hipaa{
   margin:0 auto;
-  padding: 100px 0 0 0;
+  padding: 100px 0 100px 0;
   align-content: center;
   text-align: center;
-  display: inline;
+  display: block;
 }
 
 .hipaatext{
   color:#1a1a1a;
-  display: flex;
   font-family: sans-serif;
-  flex-direction: column;
 
 }
 
@@ -182,23 +223,23 @@ height:auto;
   font-family: sans-serif;
   font-size:38px;
   font-weight:600;
-  text-align: left;
+  text-align: center;
 }
 
 .hipaadescription{
-width:80%;
-  text-align: justify;
+  text-align: center;
+  padding:0 20% 0 20%;
   font-family: sans-serif;
   font-size:18px;
   font-weight:200;
   letter-spacing: 1px;
+  justify-content: center;
 }
-.hipaaicon{
 
-  font-family: sans-serif;
-  font-size:38px;
-  font-weight:600;
-  text-align: right;
+.hipaaicon{
+  width:200px;
+  height: auto;
+  margin: 0 auto;
 }
 
 article,
@@ -4411,7 +4452,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   max-height: 340px;
 }
 @media (max-device-width: 480px) and (orientation: landscape) {
-  .navbar-fixed-top .navbar-collapse,
+  .navbar-fixed-top
+ .navbar-collapse,
   .navbar-fixed-bottom .navbar-collapse {
     max-height: 200px;
   }
