--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -19,21 +19,27 @@ body {
   background: #000;
 }
 .bg{
-
+margin:-40px 0 0 0;
   opacity:0.7;
 }
 
 .companyinto{
   position: absolute;
-  top:40%;
+  top:200px;
   width:100%;
   text-align: center;
   align-content: center;
   text-align: center;
   font-family: sans-serif;
 }
-
+.logo{
+  -ms-transform: scale(0.7, 0.7); /* IE 9 */
+    -webkit-transform: scale(0.7, 0.7); /* Safari */
+    transform: scale(0.7, 0.7);
+}
 .companyname{
+  padding:0 0 0 0;
+  line-height: 60px;
   text-align: center;
   color:#fff;
   font-size: 60px;
@@ -148,7 +154,9 @@ line-height: 40px;
 
 }
 
+.copyrights{
 
+}
 
 
 
@@ -242,6 +250,14 @@ height:auto;
   margin: 0 auto;
 }
 
+.copyrights{
+  font-family: sans-serif;
+  font-size:18px;
+  font-weight:200;
+  letter-spacing: 1px;
+  padding:20px 0 20px 0;
+  text-align: center;
+}
 article,
 aside,
 details,
